Revert "update gitignore"
This reverts commit a6c5ebe306c065e3326430814cdc0ed02b08a092.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-
+foundations/.idea
 foundations/.idea/**/workspace.xml
 foundations/.idea/**/tasks.xml
 foundations/.idea/**/usage.statistics.xml
 foundations/.idea/**/dictionaries
 foundations/.idea/**/shelf
-foundations/.idea/**/discord.xml
 
 out/
 foundations/target/
