--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ foundations/.idea/**/tasks.xml
 foundations/.idea/**/usage.statistics.xml
 foundations/.idea/**/dictionaries
 foundations/.idea/**/shelf
+foundations/.idea/discord.xml
+
 
 out/
 foundations/target/
