--- a/foundations/pom.xml
+++ b/foundations/pom.xml
@@ -49,4 +49,19 @@
         <version>${jackson-version}</version>
     </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>LocalTomcat</server>
+                    <path>/soulnotes</path>
+                    <update>true</update>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
