--- a/foundations/pom.xml
+++ b/foundations/pom.xml
@@ -38,6 +38,11 @@
         <artifactId>javax.servlet-api</artifactId>
         <version>4.0.1</version>
     </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
