--- a/foundations/pom.xml
+++ b/foundations/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>Foundation-Project</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>dev.richard</groupId>
+    <artifactId>SoulNotes</artifactId>
+    <version>0.1</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
