--- a/foundations/src/main/webapp/WEB-INF/web.xml
+++ b/foundations/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,7 @@
              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <display-name>Testing</display-name>
+    <listener>
+        <listener-class>dev.richard.utils.ContextLoaderListener</listener-class>
+    </listener>
 </web-app>
