--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ foundations/.idea/**/dictionaries
 foundations/.idea/**/shelf
 foundations/.idea/discord.xml
 foundations/.idea/workspace.xml
-foundations/src/main/resources
 out/
 foundations/target/
 log.log
+application.properties
